# sct

./: .gitignore  CODE-OF-CONDUCT.md  CONTRIBUTING.md  ETHICS.md  README.md  benchmarks.md  roadmap.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
bench/: README.md  bench.sh
bench/lib/: fhir.sh  local.sh  report.sh
bench/operations/: ancestors.sh  bulk.sh
docs/: index.md  mcp.md  ndjson.md  uk-edition-structure.md  walkthrough.md
docs/commands/: codelist.md  completions.md  diff.md  embed.md  gui.md  info.md  lexical.md  markdown.md  mcp.md  ndjson.md  parquet.md  semantic.md  sqlite.md  tui.md
s/: install
sct/: Cargo.toml
sct/assets/: index.html
sct/src/: builder.rs  main.rs  rf2.rs
sct/src/commands/: codelist.rs  diff.rs  embed.rs  gui.rs  info.rs  lookup.rs  markdown.rs  mcp.rs  mod.rs  ndjson.rs  semantic.rs
specs/: bench.md
video/: package-lock.json  package.json  tsconfig.json
video/src/: Root.tsx  Walkthrough.tsx  scenes.ts
video/src/components/: Slide.tsx  SlideContent.tsx
