[package]
name = "sct"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "sct"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
csv = "1"
anyhow = "1"
walkdir = "2"
indexmap = { version = "2", features = ["serde"] }
rusqlite = { version = "0.39", features = ["bundled"] }
parquet = { version = "58", features = ["arrow"] }
arrow = { version = "58", default-features = false, features = ["ipc"] }
indicatif = "0.18"
ureq = { version = "3", features = ["json"] }

[dev-dependencies]
tempfile = "3"
